# EC-ED1-2019

./: README.md
Aula 1/: README.md
Aula1/: README.md
Aula11/Exemplos/ed1_pilha/: CMakeLists.txt  expressao_bem_formada.c  expressao_bem_formada.h  pilha_encadeada.c  pilha_encadeada.h  pilha_tests.c  pilha_vetor.c
Aula11/Exemplos/undo/: CMakeLists.txt  EditorOperacao.c  EditorOperacao.h  Pilha.c  Pilha.h  main.c
Aula12/: Atividade.md
Aula13/: RevisaoProva.md
Aula13/ed1_generico/: CMakeLists.txt  aluno.c  aluno.h  lista_ordenada.c  lista_ordenada.h  lista_ordenada_test.c
Aula17/: Atividade.md
Aula2/: LinguagemC.md  README.md
Aula20/: Atividade.md
Aula20/ed1_tree/: ArvoreBinaria.c  ArvoreBinaria.h  ArvoreBinariaBusca.c  ArvoreBinariaBusca.h  ArvoreBinariaBuscaTests.c  ArvoreBinariaIterator.h  ArvoreGenerica.h  Base.h  CMakeLists.txt  Fila.c  Fila.h  FilaTests.c  No.c  No.h  NoBinario.c  NoBinario.h  Pilha.c  Pilha.h  StringBase.c  StringBase.h  ex1.c  ex2.c  ex3.c
Aula21/ed1_arvore_generica/: CMakeLists.txt  conta.h  main.c  no_lista.c  no_lista.h  str_util.c  str_util.h
Aula22/ed1_arvore_generica/: Atividade.md  CMakeLists.txt  README.md  conta.c  contas.txt
Aula26/: Atividade.md
Aula29/: RevisaoProva.md
Aula3/: Atividade.md  README.md
Aula4/: AlocacaoDinamica.md  Atividade.md  README.md
Aula5/: ModulosEmC.md  README.md
Aula5/ed1_string/: Makefile  ed1_string.c  ed1_string.h  ed1_string_test.c  main.c
Aula6/: ExemplosTAD.md  README.md
Aula7/: Atividade.md  README.md
Aula7/ed1_conjunto/: conjunto.c  conjunto.h  conjunto_test.c
Aula8/: README.md  lista.c
Aula9/: Atividade.md  README.md
Lista1/: Ex10-Bino.c  Ex10-DesafioDeBino.c  Ex11-SubstituicaoVetor.cpp  Ex12-Fibonacci.c  Ex12-FibonacciEmVetor.c  Ex13-LinhasNaMatriz.c  Ex13-LinhasNaMatriz.cpp  Ex14-AreaSuperior.c  Ex14-AreaSuperior.cpp  Ex3-Bhaskara.c  Ex4-Cedulas.c  Ex5-IdadeEmDias.c  Ex6-ComparacaoSubstrings.c  Ex7-ParesEImpares.c  Ex8-Resto2.cpp  Ex9-QuadradoCubo.cpp
Lista2/ed1_string/: Makefile  ed1_string.c  ed1_string.h  ed1_string_test.c  main.c
Lista2/notas_alunos/: input.txt  main.c
Lista3/ed1_conjunto/: CMakeLists.txt  Makefile  conjunto.c  conjunto.orig.c  conjunto_test.c
Lista4/Exercicio1/: Makefile  lista.c
Lista4/Exercicio2/: CMakeLists.txt  lista.c  main.c
Lista4/Exercicio3/: CMakeLists.txt  Makefile  lista_ordenada.c  lista_ordenada.h  main.c
Lista4/Exercicio4/: CMakeLists.txt  lista.c  lista_circular.c  lista_ordenada.c  lista_ordenada.h  lista_ordenada_test.c
ed1_biblioteca/: CMakeLists.txt  Makefile  base.c  base.h  base_test.c  bst.c  bst.h  bst_test.c  conjunto.h  iterator.c  iterator.h  list.c  list.h  list_test.c  red_black.c  red_black.h  red_black_test.c  stack.c  stack.h  stack_test.c  tree_dict.c  tree_dict.h  tree_dict_test.c
